// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scrollIntoView test > desktop > scrolls by default the element to the top 1`] = `
{
  "actions": [
    {
      "actions": [
        {
          "deltaX": 0,
          "deltaY": 0,
          "duration": 0,
          "origin": {
            "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
          },
          "type": "scroll",
          "x": -550,
          "y": -30,
        },
      ],
      "id": "wheel1",
      "parameters": {},
      "type": "wheel",
    },
  ],
}
`;

exports[`scrollIntoView test > desktop > scrolls element using scroll into view options 1`] = `
{
  "actions": [
    {
      "actions": [
        {
          "deltaX": 0,
          "deltaY": 0,
          "duration": 0,
          "origin": {
            "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
          },
          "type": "scroll",
          "x": -275,
          "y": -385,
        },
      ],
      "id": "wheel4",
      "parameters": {},
      "type": "wheel",
    },
  ],
}
`;

exports[`scrollIntoView test > desktop > scrolls element when using boolean scroll options 1`] = `
{
  "actions": [
    {
      "actions": [
        {
          "deltaX": 0,
          "deltaY": 0,
          "duration": 0,
          "origin": {
            "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
          },
          "type": "scroll",
          "x": -550,
          "y": -30,
        },
      ],
      "id": "wheel2",
      "parameters": {},
      "type": "wheel",
    },
  ],
}
`;

exports[`scrollIntoView test > desktop > scrolls element when using boolean scroll options 2`] = `
{
  "actions": [
    {
      "actions": [
        {
          "deltaX": 0,
          "deltaY": 0,
          "duration": 0,
          "origin": {
            "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
          },
          "type": "scroll",
          "x": -550,
          "y": -770,
        },
      ],
      "id": "wheel3",
      "parameters": {},
      "type": "wheel",
    },
  ],
}
`;

exports[`scrollIntoView test > mobile native app > does not find the element after max 5 scrolls 1`] = `
"Element not found within scroll limit of 5 scrolls by scrolling "up". Are you sure the element is within the scrollable element or the direction is correct? You can change the scrollable element or direction like this:

await elem.scrollIntoView({
    direction: 'left' // possible options are: 'up|down|left|right'
    scrollableElement: $('#scrollable'),
});

        "
`;
